Grutatxt Release Notes
======================

2.0.16
------

 * New RTF driver.
 * New table of contents generation, triggered by the
   `--toc' command line argument or by adding a special
   mark inside the text.

2.0.15
------

 * New parameter `url-label-max' to the HTML driver to set
   a maximum size for URLs.
 * New script `pod2grutatxt', to convert Perl documentation
   in POD format to Grutatxt.
 * The `pre' mode is really verbatim, so bold / italic markup
   is not processed.

2.0.14
------

 * More proper closing of `li' elements in HTML output.

2.0.13
------

 * Fixed sporadic hungups that happened under UTF-8 locales.

2.0.12
------

 * New markup for monospaced text / inline code, by enclosing text
   between a backtick and an apostrophe.
 * The command line utility now includes an option to set the HTML
   charset encoding (with a default of iso-8859-1).
 * The LaTeX driver now includes an option to change tabs into spaces.
 * Fixed a bug in the man page driver, that made extra indentations
   appear on blank lines.

2.0.11
------

 * New LaTeX driver.

2.0.10
------

 * Generates tidier HTML by quoting all attributes. Also, verbatim
   HTML code is no longer bound to blocks of lines, but can happen in
   the middle of a line.

2.0.9
-----

 * Strips the leading ./ in relative URLs, and fixes some minor bugs.

2.0.8
-----

 * Support for relative URLs.